.NET code gen preliminary check-in
